fixed some pixel-perfects

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <body>
     <section class="header-nav">
       <div class="container">
-        <nav class="nav-container">
+        <nav>
           <ul class="desktop-menu">
             <li>
               <a href="#">صفحه اصلی</a>
@@ -110,13 +110,13 @@
         </div>
       </div>
     </section>
-
     <section class="articles section">
       <div class="container">
         <h2 class="title">لورم ایپسوم متن ساختگی</h2>
         <ul class="articles-container">
           <li>
             <a href="#">
+              <img src="assets/images/plus.png" alt="plus" class="plus" />
               <img
                 src="assets/media/architectures/architecture-1.jpg "
                 alt=""
@@ -138,8 +138,9 @@
           </li>
           <li>
             <a href="#">
+              <img src="assets/images/plus.png" alt="plus" class="plus" />
               <img
-                src="assets/media/architectures/architecture-1.jpg "
+                src="assets/media/architectures/architecture-2.jpg "
                 alt=""
               />
             </a>
@@ -159,8 +160,31 @@
           </li>
           <li>
             <a href="#">
+              <img src="assets/images/plus.png" alt="plus" class="plus" />
               <img
-                src="assets/media/architectures/architecture-1.jpg "
+                src="assets/media/architectures/architecture-3.jpg "
+                alt=""
+              />
+            </a>
+            <h3 class="sub-title highlight">
+              <a href="#"> لورم ایپسوم </a>
+            </h3>
+            <p class="para">
+              لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با
+              استفاده از طراحان گرافیک است، چاپگرها و متون بلکه روزنامه و مجله
+              در ستون و سطرآنچنان که لازم است، و برای شرایط فعلی مورد نیاز، و
+              کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد کتابهای
+              زیادی در شصت و سه درصد گذشته حال و آینده، شناخت فراوان جامعه و
+              متخصصان را می طلبد، تا با نرم افزارها شناخت بیشتری را برای طراحان
+              رایانه ای علی الخصوص طراحان خلاقی، و فرهنگ پیشرو در زبان فارسی
+              ایجاد کرد، در این صورت می توان امید داشت که تمام و دشواری
+            </p>
+          </li>
+          <li>
+            <a href="#">
+              <img src="assets/images/plus.png" alt="plus" class="plus" />
+              <img
+                src="assets/media/architectures/architecture-4.jpg "
                 alt=""
               />
             </a>
@@ -182,7 +206,6 @@
       </div>
     </section>
     <section class="video">
-      <!-- <video src="assets/media/video.jpg" class="video-player"></video> -->
       <img src="assets/media/video.jpg" class="video-player" />
       <div class="container video-overlay">
         <h2 class="title">لورم ایپسوم متن ساختگی</h2>
@@ -197,82 +220,82 @@
       </div>
     </section>
     <section class="products section">
+      <h2 class="title">لورم ایپسوم متن ساختگی</h2>
       <div class="container">
-        <h2 class="title">لورم ایپسوم متن ساختگی</h2>
-        <div class="products-container">
-          <div class="product-item">
+        <ul class="products-container">
+          <li>
             <img src="assets/media/products/product-1.jpg" alt="productImg" />
-            <div class="product-content">
+            <div>
               <h2 class="title">لورم ایپسوم</h2>
               <ul class="actions">
-                <li>لورم</li>
-                <li>لورم</li>
-                <li>لورم</li>
-                <li>لورم</li>
+                <li><a href="#">لورم</a></li>
+                <li><a href="#">لورم</a></li>
+                <li><a href="#">لورم</a></li>
+                <li><a href="#">لورم</a></li>
               </ul>
             </div>
-          </div>
-          <div class="product-item">
+          </li>
+          <li>
             <img src="assets/media/products/product-1.jpg" alt="productImg" />
-            <div class="product-content">
+            <div>
               <h2 class="title">لورم ایپسوم</h2>
               <ul class="actions">
-                <li>لورم</li>
-                <li>لورم</li>
-                <li>لورم</li>
-                <li>لورم</li>
+                <li><a href="#">لورم</a></li>
+                <li><a href="#">لورم</a></li>
+                <li><a href="#">لورم</a></li>
+                <li><a href="#">لورم</a></li>
               </ul>
             </div>
-          </div>
-          <div class="product-item">
+          </li>
+          <li>
             <img src="assets/media/products/product-1.jpg" alt="productImg" />
-            <div class="product-content">
+            <div>
               <h2 class="title">لورم ایپسوم</h2>
               <ul class="actions">
-                <li>لورم</li>
-                <li>لورم</li>
-                <li>لورم</li>
-                <li>لورم</li>
+                <li><a href="#">لورم</a></li>
+                <li><a href="#">لورم</a></li>
+                <li><a href="#">لورم</a></li>
+                <li><a href="#">لورم</a></li>
               </ul>
             </div>
-          </div>
-          <div class="product-item">
+          </li>
+          <li>
             <img src="assets/media/products/product-1.jpg" alt="productImg" />
-            <div class="product-content">
+            <div>
               <h2 class="title">لورم ایپسوم</h2>
               <ul class="actions">
-                <li>لورم</li>
-                <li>لورم</li>
-                <li>لورم</li>
-                <li>لورم</li>
+                <li><a href="#">لورم</a></li>
+                <li><a href="#">لورم</a></li>
+                <li><a href="#">لورم</a></li>
+                <li><a href="#">لورم</a></li>
               </ul>
             </div>
-          </div>
-          <div class="product-item">
+          </li>
+          <li>
             <img src="assets/media/products/product-1.jpg" alt="productImg" />
-            <div class="product-content">
+            <div>
               <h2 class="title">لورم ایپسوم</h2>
               <ul class="actions">
-                <li>لورم</li>
-                <li>لورم</li>
-                <li>لورم</li>
-                <li>لورم</li>
+                <li><a href="#">لورم</a></li>
+                <li><a href="#">لورم</a></li>
+                <li><a href="#">لورم</a></li>
+                <li><a href="#">لورم</a></li>
               </ul>
             </div>
-          </div>
-          <div class="product-item">
+          </li>
+          <li>
             <img src="assets/media/products/product-1.jpg" alt="productImg" />
-            <div class="product-content">
+            <div>
               <h2 class="title">لورم ایپسوم</h2>
               <ul class="actions">
-                <li>لورم</li>
-                <li>لورم</li>
-                <li>لورم</li>
-                <li>لورم</li>
+                <li><a href="#">لورم</a></li>
+                <li><a href="#">لورم</a></li>
+                <li><a href="#">لورم</a></li>
+                <li><a href="#">لورم</a></li>
               </ul>
             </div>
-          </div>
-        </div>
+          </li>
+        </ul>
       </div>
     </section>
     <section class="start-now">
@@ -290,78 +313,73 @@
     <section class="catalogs section">
       <div class="container">
         <h1 class="title">لورم ایپسوم متن ساختگی</h1>
-        <div class="catalog-container">
-          <div class="catalog-item">
-            <div class="catalog-item-image">
-              <img src="assets/media/spaces/space-1.jpg" alt="img" />
-            </div>
-            <div class="catalog-item-text">
+        <ul>
+          <li>
+            <img src="assets/media/spaces/space-1.jpg" alt="img" />
+            <div>
               <h3 class="sub-title highlight">لورم ایپسوم</h3>
               <p class="para">
                 لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با
                 استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله
                 در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد
-                نیاز و کاربردهای متنوع با هدف بهبود ابزارهای
+                نیاز و کاربردهای متنوع با هدف بهبود ابزارهای نیاز و کاربردهای
+                متنوع با هدف بهبود ابزارهای
               </p>
             </div>
-          </div>
-          <div class="catalog-item">
-            <div class="catalog-item-image">
-              <img src="assets/media/spaces/space-1.jpg" alt="img" />
-            </div>
-            <div class="catalog-item-text">
+          </li>
+          <li>
+            <img src="assets/media/spaces/space-2.jpg" alt="img" />
+            <div>
               <h3 class="sub-title highlight">لورم ایپسوم</h3>
               <p class="para">
                 لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با
                 استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله
                 در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد
-                نیاز و کاربردهای متنوع با هدف بهبود ابزارهای
+                نیاز و کاربردهای متنوع با هدف بهبود ابزارهای نیاز و کاربردهای
+                متنوع با هدف بهبود ابزارهای
               </p>
             </div>
-          </div>
-          <div class="catalog-item">
-            <div class="catalog-item-image">
-              <img src="assets/media/spaces/space-1.jpg" alt="img" />
-            </div>
-            <div class="catalog-item-text">
+          </li>
+          <li>
+            <img src="assets/media/spaces/space-3.jpg" alt="img" />
+            <div>
               <h3 class="sub-title highlight">لورم ایپسوم</h3>
               <p class="para">
                 لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با
                 استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله
                 در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد
-                نیاز و کاربردهای متنوع با هدف بهبود ابزارهای
+                نیاز و کاربردهای متنوع با هدف بهبود ابزارهای نیاز و کاربردهای
+                متنوع با هدف بهبود ابزارهای
               </p>
             </div>
-          </div>
-          <div class="catalog-item">
-            <div class="catalog-item-image">
-              <img src="assets/media/spaces/space-1.jpg" alt="img" />
-            </div>
-            <div class="catalog-item-text">
+          </li>
+          <li>
+            <img src="assets/media/spaces/space-4.jpg" alt="img" />
+            <div>
               <h3 class="sub-title highlight">لورم ایپسوم</h3>
               <p class="para">
                 لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با
                 استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله
                 در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد
-                نیاز و کاربردهای متنوع با هدف بهبود ابزارهای
+                نیاز و کاربردهای متنوع با هدف بهبود ابزارهای نیاز و کاربردهای
+                متنوع با هدف بهبود ابزارهای
               </p>
             </div>
-          </div>
-          <div class="catalog-item">
-            <div class="catalog-item-image">
-              <img src="assets/media/spaces/space-1.jpg" alt="img" />
-            </div>
-            <div class="catalog-item-text">
+          </li>
+          <li>
+            <img src="assets/media/spaces/space-5.jpg" alt="img" />
+            <div>
               <h3 class="sub-title highlight">لورم ایپسوم</h3>
               <p class="para">
                 لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با
                 استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله
                 در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد
-                نیاز و کاربردهای متنوع با هدف بهبود ابزارهای
+                نیاز و کاربردهای متنوع با هدف بهبود ابزارهای نیاز و کاربردهای
+                متنوع با هدف بهبود ابزارهای
               </p>
             </div>
-          </div>
-        </div>
+          </li>
+        </ul>
       </div>
     </section>
     <section class="contact section">
@@ -400,7 +418,7 @@
     </section>
     <section class="footer section">
       <div class="container">
-        <ul class="footer-menu">
+        <ul>
           <li>
             <a href="#"> معماری </a>
           </li>
@@ -420,7 +438,7 @@
             <a href="#"> فضاها </a>
           </li>
         </ul>
-        <hr class="divider" />
+        <hr class="divider" color="#707070" />
         <div class="footer-copyright">
           <p>تمامی حقوق این وب سایت متعلق به شرکت سفارش دهنده می‌باشد</p>
           <p>
